# ubuntu_based_docker_image

./: CMakeLists.txt  Dockerfile  build  docker-compose.yml  run
